<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Trinity</string>

    <string name="pbap_account_type">com.android.bluetooth.pbapsink</string>

    <!-- BT common text field -->
    <string name="bt_disabled">蓝牙未开启</string>
    <string name="bt_disabled_next">请先开启蓝牙</string>
    <string name="hfp_disabled">蓝牙电话未连接</string>
    <string name="hfp_disabled_next">请先连接蓝牙电话</string>
    <string name="pbap_pb_downloading">正在同步通讯录...</string>
    <string name="pbap_pb_none">暂无通讯录</string>
    <string name="pbap_pb_none_next">请同步通讯录</string>
    <string name="pbap_cl_downloading">正在同步通话记录</string>
    <string name="pbap_cl_none">暂无通话记录</string>
    <string name="pbap_cl_none_next">请同步通话记录</string>
    <string name="pbap_sync">同步通讯录</string>

    <!-- BT dialpad number -->
    <string name="dialpad_0_number">0</string>
    <string name="dialpad_1_number">1</string>
    <string name="dialpad_2_number">2</string>
    <string name="dialpad_3_number">3</string>
    <string name="dialpad_4_number">4</string>
    <string name="dialpad_5_number">5</string>
    <string name="dialpad_6_number">6</string>
    <string name="dialpad_7_number">7</string>
    <string name="dialpad_8_number">8</string>
    <string name="dialpad_9_number">9</string>
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">#</string>

    <!-- Multimedia -->
    <string name="online">在线</string>
    <string name="local">本地</string>

</resources>
